feature(*): update src path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
     with:
       language-tooling: 'nodejs'
       node-version: 'lts/gallium'
-      target-directory: './src'
+      target-directory: '.'
