--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@slack/bolt": "3.11.3",
     "axios": "0.27.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "config": "3.3.7",
     "cron": "2.0.0",
     "js-yaml": "4.1.0",
