--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  snyk-scan-dotnet:
+  snyk-scan-nodejs:
     name: Snyk Scan
     uses: ./.github/workflows/snyk.yaml
     secrets: inherit
     with:
       language-tooling: 'nodejs'
       node-version: 'lts/gallium'
-      target-directory: '.'
+
+  snyk-scan-docker:
+    name: Snyk Scan - Docker
+    uses: ./.github/workflows/snyk.yaml
+    secrets: inherit
+    with:
+      language-tooling: 'docker'
